--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <div id="weaponIcon">
+    <img id="weaponImage" src="" alt="Weapon Icon">
+
 </body>
 </html>
