--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -11,7 +11,7 @@
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
   <div id="weaponIcon">
-    <img id="weaponImage" src="" alt="Weapon Icon">
+    <img id="weaponImage" src="" alt="Weapon Icon" class="no-select">
 
 </body>
 </html>
