--- a/Nova pasta/Index2.html
+++ b/Nova pasta/Index2.html
@@ -88,28 +88,30 @@
       </div>
     </div>
     <div class="asset">
-        <img src="TvHlVJ.png" alt="Musica de Fundo">
+        <img src="musica_fundo.png" alt="Musica de Fundo">
         <div class="asset-details">
           <div class="asset-title">Musica de fundo </div>
           <a class="asset-link" href="https://freemusicarchive.org/music/lite-saturation/workout-metal/workout-metal-medium1/" target="_blank">Ver Asset</a>
         </div>
       </div>
-  </div>
+  
   <div class="asset">
-    <img src="TvHlVJ.png" alt="Musica de Fundo">
+    <img src="freesound.png" alt="som de tiro">
     <div class="asset-details">
       <div class="asset-title">Som de tiro</div>
       <a class="asset-link" href="https://freesound.org/people/MATRIXXX_/sounds/506516/" target="_blank">Ver Asset</a>
     </div>
   </div>
-</div>
+
 <div class="asset">
-    <img src="TvHlVJ.png" alt="Musica de Fundo">
+    <img src="freesound.png" alt="som hit">
     <div class="asset-details">
       <div class="asset-title">Som de hit</div>
       <a class="asset-link" href="https://freesound.org/people/MATRIXXX_/sounds/523769/" target="_blank">Ver Asset</a>
     </div>
   </div>
+</div>
+</div>
 </div>
 </body>
 </html>
