--- a/Nova pasta/index.html
+++ b/Nova pasta/index.html
@@ -17,6 +17,9 @@
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="weaponIcon">
       <img id="weaponImage" src="" alt="Weapon Icon" class="no-select">
+      <audio id="musica" src="Lite_Saturation_-_Workout_Metal_-_Medium1.mp3" loop></audio>
+      <audio id="hit" src="523769__matrixxx__retro-hit (1).wav" ></audio>
+      <audio id="Mag" src="506516__matrixxx__magic-spell-08.wav" ></audio>
     </div>
   </div>
 </body>
@@ -29,5 +32,7 @@
     }
   });
 });
-
+const somElement = document.getElementById('musica');
+somElement.volume = 0.3;
+somElement.play();
 </script>
