--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <title>Survival Mayhem</title>
+  <title>Crypt of Carnage</title>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  
+  <a href="index2.html" id="linkToIndex2">
+    <p>aperte a Letra O para ir para a página Assets</p>
+  </a>
+  <div id="gameCanvasContainer">
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div id="weaponIcon">
+      <img id="weaponImage" src="" alt="Weapon Icon" class="no-select">
+      <audio id="musica" src="Lite_Saturation_-_Workout_Metal_-_Medium1.mp3" loop></audio>
+      <audio id="hit" src="523769__matrixxx__retro-hit (1).wav" ></audio>
+      <audio id="Mag" src="506516__matrixxx__magic-spell-08.wav" ></audio>
+    </div>
+  </div>
 </body>
 </html>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("keydown", function(event) {
+    if (event.key === "o" || event.key === "O") {
+      window.location.href = "index2.html";
+    }
+  });
+});
+const somElement = document.getElementById('musica');
+somElement.volume = 0.3;
+somElement.play();
+</script>
